2005-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Renamed openoffice module to ooo-build.

2005-02-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved new modules according to final
	module list from proposed to desktop, and the rest to extras.

2005-02-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gucharmap has been branched.

2005-01-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added sabayon to extras.

2005-01-11  Todd Kulesza  <todd@dropline.net>

	* translation-status.xml: Changed Drivel branch.

2005-01-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtk+ and glib have been branched.

2005-01-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-user-share to proposed.

2005-01-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added cupid to extras.

2005-01-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtksourceview has been branched.

2004-12-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the gimp branch.

2004-12-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the gossip branch.

2004-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added evince to extras.

2004-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-nettool has been branched.

2004-12-22  Christian Persch  <chpe@cvs.gnome.org>

	* translation-status.xml: Switch epiphany-extensions to HEAD.

2004-12-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libwnck has been branched.

2004-12-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gpdf has been branched.

2004-12-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: sound-juicer has been proposed.

2004-12-07  Christian Rose  <menthos@menthos.com>
