@@ -2742,9 +2742,9 @@
       </component>
     </version>
   </module>
-  <module name="setup-tools-backends">
+  <module name="system-tools-backends">
     <version release="gnome-2.8">
-      <component name="setup-tools-backends" dir="setup-tools-backends" group="desktop">
+      <component name="system-tools-backends" dir="system-tools-backends" group="desktop">
 	<podir dir="po"/>
 	<potname name="setup-tools-backends.pot"/>
 	<branch name="gnome-2-8"/>
@@ -2753,7 +2753,7 @@
       </component>
     </version>
     <version release="gnome-2.10">
-      <component name="setup-tools-backends" dir="setup-tools-backends" group="desktop">
+      <component name="system-tools-backends" dir="system-tools-backends" group="desktop">
 	<podir dir="po"/>
 	<potname name="setup-tools-backends.pot"/>
 	<branch name="HEAD"/>
