@@ -1,5 +1,10 @@
 2005-02-09  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Renamed setup-tools-backends module
+	to system-tools-backends.
+
+2005-02-09  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Renamed openoffice module to ooo-build.
 
 2005-02-07  Christian Rose  <menthos@menthos.com>
